set(MODULE_NAME "ELITPCdcs")
MESSAGE( STATUS "Adding CMake fragment for module:\t\t" ${MODULE_NAME} )
	add_subdirectory(nodeset)
if(BUILD_SERVER) 
	add_subdirectory(server)
endif(BUILD_SERVER)
if(BUILD_DB)
	add_subdirectory(clientDB)
endif(BUILD_DB)
if(BUILD_GUI)
	add_subdirectory(clientGUI)
endif(BUILD_GUI)
install(FILES $<1:${PROJECT_SOURCE_DIR}/${MODULE_NAME}/configs/> DESTINATION config)