set(MODULE_NAME "ELITPCdcs")
message(STATUS "Adding CMake fragment for module:\t\t" ${MODULE_NAME})
add_subdirectory(nodeset)
if(BUILD_SERVER)
  add_subdirectory(server)
endif(BUILD_SERVER)
if(BUILD_GUI)
  add_subdirectory(clientGUI)
endif(BUILD_GUI)
if(BUILD_CHECKS)
    if(BUILD_SERVER)
        add_subdirectory(clientCheck)
    else()
        message(WARNING "Building checks requiers server. Set BUILD_SERVER=ON")
    endif(BUILD_SERVER)
endif(BUILD_CHECKS)
install(FILES $<1:${PROJECT_SOURCE_DIR}/${MODULE_NAME}/configs/>
        DESTINATION config)
